fix build errors

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: post-index
-title: "Welcome to the Neo-HPSTR Blog"
-description: "Describe this nonsense."
+title: "Welcome to the Fun with SODA blog"
+description: "Blogging about all the fun we can have with the Socrata Open Data API"
 tags: [Jekyll, theme, themes, responsive, blog, modern]
 comments: false
 ---
