--- a/sodaplus.html
+++ b/sodaplus.html
@@ -120,6 +120,7 @@ overflow:auto;
 
 <body>
 <div id="header">SODA Plus <strong>Domain:</strong> <input type="text" id="domains" /> <strong>Dataset:</strong> <input type="text" id="dataset" /></div>
+<p><strong>Attention:</strong> The primary goal is to create a powerful GUI for creating and modifying Socrata API urls. In attention this site will have advanced features like subscribing to new results to queries.</p>
   <strong>Url:</strong> <input style="width:80%" type="text" id="url" /> <span id="number_of_rows"></span> rows
 <div id="right_sidebar">
 
