--- a/sodaplus.html
+++ b/sodaplus.html
@@ -444,7 +444,7 @@ $(function() {
   var datasets = [];
   $.get('http://funwithsoda.github.io/catalog.json', function(data) {
     //data = JSON.parse(data);
-    window.datasetIDToDomain = data['dataset_to_domain'];
+    window.datasetIDToDomain = data['datasets_to_domain'];
     
     window.allDatasets = data['datasets'];
     
