--- a/sodaplus.html
+++ b/sodaplus.html
@@ -202,8 +202,14 @@ function getItemsForField(field) {
     });
   });
 }
-function getFields(domain, apiID) {
-  $.get('https://'+domain+'/resource/'+apiID+'.json?$limit=1', function(data) {
+function getFields() {
+  if (window.location.hash.indexOf('?') > -1) {
+    var base_url = window.location.hash.substring(1, window.location.hash.indexOf('?'));
+  } else {
+    var base_url = window.location.hash.substring(1);
+    
+  }
+  $.get(base_url+'?$limit=1', function(data) {
     var fields = Object.keys(data[0]).concat([':id', ':created_at', ':updated_at', 'count(*)']);
     var fields_checkboxes = '';
     var url = 'https://'+domain+'/resource/'+apiID+'.json';
@@ -323,7 +329,7 @@ function getData() {
   }
   console.log('going to url '+urlToGet);
   if (urlToGet.indexOf('.json') > -1) {
-    getFields(domain, datasetID);
+    getFields();
     $.get('https://'+domain+'/resource/'+datasetID+'.json?$select=count(*)', function(data) {
       $('#number_of_rows').text(parseInt(data[0]['count']).toLocaleString('en-US'));
     });
