--- a/sodaplus.html
+++ b/sodaplus.html
@@ -212,8 +212,14 @@ function getFields() {
   $.get(base_url+'?$limit=1', function(data) {
     var fields = Object.keys(data[0]).concat([':id', ':created_at', ':updated_at', 'count(*)']);
     var fields_checkboxes = '';
-    var url = 'https://'+domain+'/resource/'+apiID+'.json';
-    window.base_url = url;
+    if (window.location.hash.indexOf('?') > -1) {
+    var base_url = window.location.hash.substring(1, window.location.hash.indexOf('?'));
+  } else {
+    var base_url = window.location.hash.substring(1);
+    
+  }
+  window.base_url = base_url;
+    url = base_url;
     //$('#url').val(url);
     $.each(fields, function(i, v) {
       fields_checkboxes += '<li><input type="checkbox" value="'+v+'" class="select" /> '+v+'</li>';
