--- a/sodaplus.html
+++ b/sodaplus.html
@@ -123,7 +123,7 @@ overflow:auto;
 </head>
 
 <body>
-<div id="header">SODA Plus <strong>Domain:</strong> <input type="text" id="domains" /> <strong>Dataset:</strong> <input type="text" id="dataset" /></div>
+<div id="header"><a href="http://funwithsoda.github.io/sodaplus.html">SODA Plus</a> <strong>Domain:</strong> <input type="text" id="domains" /> <strong>Dataset:</strong> <input type="text" id="dataset" /></div>
   <strong>Url:</strong> <input style="width:80%" type="text" id="url" /> <span id="number_of_rows"></span> rows
   <p><strong>Attention:</strong> This is a project in the early stages to provide a GUI for generating Socrata API urls, doing advanced display of data, and allowing subscription to new results to queries.</p>
 <div id="right_sidebar">
