--- a/sodaplus.html
+++ b/sodaplus.html
@@ -108,6 +108,13 @@ overflow:auto;
     }
   }
 }
+input[type=text] {
+  border:1px solid #000;
+}
+#header input[type=text] {
+  border:1px solid #FFF;
+  background:#000;
+}
   </style>
 
   <title></title>
