--- a/sodaplus.html
+++ b/sodaplus.html
@@ -23,6 +23,9 @@
   <script src="https://cdn.rawgit.com/avianey/jqDoubleScroll/master/jquery.doubleScroll.js"></script>
 
   <style type="text/css">
+  #header a:link, #header a:visited {
+    color:#FFF;
+  }
   table {
   overflow:auto;
   }
