--- a/sodaplus.html
+++ b/sodaplus.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <script type="text/javascript"> if (!window.console) console = {log: function() {}}; </script>
+<title>SODA Plus</title>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <meta name="robots" content="noindex, nofollow">
   <meta name="googlebot" content="noindex, nofollow">
