--- a/sodaplus.html
+++ b/sodaplus.html
@@ -135,14 +135,13 @@ input[type=text] {
 </head>
 
 <body>
-<div id="header"><a href="http://funwithsoda.github.io/sodaplus.html">SODA Plus</a> 
-<strong>Domain:</strong> <input type="text" id="domains" /> 
+<div id="header"><a href="http://funwithsoda.github.io/sodaplus.html">SODA Plus</a>: A project in the early stages to provide a GUI for generating Socrata API urls, doing advanced display of data, and allowing subscription to new results to queries. 
+<br/><strong>Domain:</strong> <input type="text" id="domains" /> 
 <strong>Dataset:</strong> <input type="text" id="dataset" />
 <input type="button" id="go_to_official_frontend" value="Go to official frontend" c/>
 </div>
   <strong>Url:</strong> <input style="width:80%" type="text" id="url" /> <span id="number_of_rows"></span> rows
-  <p><strong>Attention:</strong> This is a project in the early stages to provide a GUI for generating Socrata API urls, doing advanced display of data, and allowing subscription to new results to queries.</p>
-<div id="right_sidebar">
+  <div id="right_sidebar">
 
 <ul>
 <li><input type="button" value="Go to view without any parameters" id="go_to_main_view" /></li>
